--- a/oauth2-client/src/main/resources/application.properties
+++ b/oauth2-client/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=oauth2-client
 
 server.port=8080
 
-spring.security.oauth2.client.registration.google.client-id=857481628146-sf9i3c6h0lm54aehnr9oujmctbqb1p6a.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${857481628146-sf9i3c6h0lm54aehnr9oujmctbqb1p6a.apps.googleusercontent.com}
+spring.security.oauth2.client.registration.google.client-secret=${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}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
